# bike-news-room

./: .gitignore  DEPLOYMENT.md  DESIGNER_PROMPT.md  LICENSE  MOBILE_RELEASE.md  PARSER_COVERAGE.md  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml  deploy.yml
Bike News Room/: Bike News Room.html  canvas-app.jsx  components.jsx
Bike News Room-withlogo/: Bike News Room-print.html  Logo Options.html  Tokens & Components.html  app.jsx  components.css  data.jsx  overlays.jsx  tokens.css
backend/: Cargo.toml  Dockerfile  README.md  feeds.toml
backend/.cargo/: audit.toml
backend/data/: cycling_races.json
backend/src/: lib.rs  main.rs
backend/src/application/: add_user_source_use_case.rs  auto_tweet_use_case.rs  backfill_archive_use_case.rs  crawl_sites_use_case.rs  digest_use_case.rs  ingest_feeds_use_case.rs  mine_candidates_use_case.rs  mod.rs  query_use_cases.rs  race_matcher_use_case.rs  reader_use_case.rs  retention_use_case.rs  sync_calendar_use_case.rs  trending_use_case.rs  wiki_context_use_case.rs
backend/src/domain/: entities.rs  errors.rs  mod.rs
backend/src/domain/ports/: article_repository.rs  feed_fetcher.rs  feed_repository.rs  mod.rs  race_link_repository.rs  race_repository.rs  source_candidate_repository.rs  subscriber_repository.rs  web_crawler.rs
backend/src/domain/services/: categorizer.rs  dedup.rs  mod.rs  race_matcher.rs  shutdown_detector.rs  url_guard.rs
backend/src/infrastructure/: archive_backfill_targets.rs  config.rs  html_crawler.rs  mod.rs  race_calendar_scraper.rs  rss_fetcher.rs  snapshot.rs  sqlite_repository.rs
backend/src/web/: article_html.rs  crawl_targets.rs  dto.rs  errors.rs  mod.rs  routes.rs  sitemap.rs
backend/tests/: api_integration.rs  db_integration.rs  race_link_tests.rs  use_case_tests.rs
bnr-crawler/: Cargo.toml  Dockerfile  README.md
bnr-crawler/src/: main.rs
docs/: free-enhancements.md  notifications.md  play-store-release.md  post-release-roadmap.md  security-audit.md  test-on-device.md
frontend/: .gitignore  README.md  pubspec.yaml
frontend/android/app/: build.gradle.kts
frontend/assets/catalogue/: cycling_sources.json  watchlist_seed.json
frontend/integration_test/: app_test.dart  live_backend_test.dart
frontend/integration_test/helpers/: mock_api.dart  test_harness.dart
frontend/ios/Runner/: Info.plist  PrivacyInfo.xcprivacy
frontend/ios/Runner.xcodeproj/: project.pbxproj
frontend/lib/: main.dart
frontend/test/: widget_test.dart
frontend/web/: _headers  _redirects  index.html  manifest.json  privacy.html
scripts/: build-android-release.sh  capture-screenshot.sh  cloudflare-build.sh  deploy-backend-hf.sh  generate_brand_icons.py  make-feature-graphic.py  prepare-store-screenshots.py
store-assets/listings/: play-store-listing.md
(+125 files in other folders)
